@@ -4,8 +4,10 @@ debhelper (7.3.5) experimental; urgency=low
     versions in case they're installed. Ensure that correct
     shebangs are created by using `python' first during build
     and install. Closes: #520834
+    Also build with python*-dbg in case the package build-depends
+    on them.
 
- -- Bernd Zeimetz <bzed@debian.org>  Sun, 19 Jul 2009 03:45:23 +0200
+ -- Bernd Zeimetz <bzed@debian.org>  Sun, 19 Jul 2009 15:26:13 +0200
 
 debhelper (7.3.4) experimental; urgency=low
 
